--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@ header {
     background-color: #a2ccc2;
     display: flex;
     align-items: center;
+    z-index: 10;
+    position: sticky;
+    top: 0px;
+    
 
 
 }
@@ -191,14 +195,15 @@ main section{
     width: 100%;
     padding-bottom: 50px;
     font-size: 0.7em;
-    font-style: italic;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+
     
 }
-
+.carousel{
+    width: 100;
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
 
 
 
