--- a/css/style.css
+++ b/css/style.css
@@ -17,94 +17,157 @@
 
 html {
     /* 1em = 10px */
-    font-size: 62.5%; 
+    font-size: 62.5%;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    
 
 }
 
-.error404{
+.error404 {
     width: 100%;
     height: 1000px;
-    
-    background-image: url(../medios/404.png), linear-gradient(
-        to bottom,
-        #a2ccc2,
-        #163d5b
-    );
+
+    background-image: url(../medios/404.png), linear-gradient(to bottom,
+            #a2ccc2,
+            #163d5b);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
 
 }
-
+.checkOut{
+    display:none;
+}
 /* titulos y subtitulos */
 h1 {
+    width: 100%;
     font-size: 4em;
     text-align: center;
-    font-family: 'Indie Flower', cursive;
+    font-family: Georgia, 'Times New Roman', Times, serif
 }
-h2{
+
+h2 {
     font-size: 3em;
     text-align: center;
-    margin: 40px;
+    
 }
-h3{
+
+h3 {
     font-size: 2.5em;
 }
-p{
+
+p {
     font-size: 2em;
 }
-h4{
-    font-size: 1.8em;
+
+h4 {
+    font-size: 2.3em;
     text-align: center;
 }
+
 /* formularios */
-label{
+label {
     font-size: 2em;
 }
+
 /* INDEX[line 13] header */
 
+
 header {
-    background-color: white ;
+    padding: 10px 20px;
+    background-color: white;
     display: flex;
     justify-content: space-between;
- 
-}
-
-.navbar {
-    display: flex;
-
-
     
     
+    
+
 }
-.navbar a{
+.logo{
+    justify-content: start;
+}
+
+.navbar a {
 
     font-size: 2em;
-    
+
 }
+
+
+.botonMenu {
+
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    width: 100%;
+
+
+}
+
+
+
+
+
+
+
 .menuPrincipal {
     width: 100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+
+
+}
+.menuPrincipal a:hover {
+    
+    
+
+}
+.btn-primary {
+    width: 100px;
+    font-size: 1.5rem;
+    background-color: #a2ccce;
+    color: black;
+    border: 0;
+    
     
 }
-.menuPrincipal div{
-    width: 100%;
-    display: flex;
-    align-items: start;
-
+.btn:hover{
+    background-color: #2d8281;
 }
-.menuSecundario {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.btn:active{
+    background-color: #163d5b;
 }
-
-
+.nav{
+    padding-left: 30px;
+}
+.login{
+    display: flex;
+    font-size: 1.5em;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    border: 0;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+.login input{
+    margin: 2px;
+    width: 80%;
+    
+}
+.login button{
+    width: 100px;
+}
 
 /* INDEX[line 43] main */
-main section{
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+main section {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -112,24 +175,27 @@ main section{
 }
 
 
-.videoPromesa{
-    background-color: white;
-    
-    
-}
-.videoPromesa p{
-    text-align: center;
-    font-family: 'Indie Flower', cursive;
-    
-}
-.videoPromesa video{
-    width:100%
-    
-    
+.videoPromesa {
+    width: 100%;
+    background-color: #E2F3FD;;
+
 
 }
+
+.videoPromesa p {
+    text-align: center;
+    font-family: 'Indie Flower', cursive;
+
+}
+
+.videoPromesa video {
+    width: 1000px;
+    background-color: #E2F3FD;
+}
+
 .promesa {
     
+
     margin: 100px 0px;
     width: 70%;
     display: flex;
@@ -137,189 +203,502 @@ main section{
     align-items: center;
 
 }
+
 /* INDEX[line 51]: imagen con texto y registro a la derecha  */
-.infoRegistro{
+.infoRegistro {
+    width: 100%;
     background-color: #e6b8c2;
     font-family: 'Indie Flower', cursive;
     flex-direction: row;
     text-align: center;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-end;
+    flex-wrap: wrap;
 
 }
-.infoRegistroLeft{
-    width: 40%;
-}
-.infoRegistroLeft img {
-    width:350px
+
+.infoRegistroLeft {
+    margin: 20px 20px;
     
 }
+
+.infoRegistroLeft img {
+    width: 350px
+}
+
 .infoRegistro a {
     font-size: 2.4em;
 
 }
-.infoRegistroRight{
-    width: 50%;
+
+.infoRegistroRight {
+    width: 400px;
+    margin: 5px 20px;
+    height: 500px;
 }
 
 /*  INDEX[line 63]:mensajes de las personas en futuro carrusel */
 
-
-
-.testimonios div{
-    width: 100%;
-    padding-bottom: 50px;
-    font-size: 0.7em;
+.container-xl{
+    
     display: flex;
     justify-content: center;
-    
+    align-items: center;
+    margin: 0px;
+    padding: 0px;
 }
 .carousel{
-    width: 100;
-    margin: 0;
-    padding: 0;
-    border: 0;
+    width: 60%;
+    margin: 30px 0px;
 }
-
+.carousel img{
+    width: 100%;
+}
 
 
 /* footer */
-footer{
+footer {
+    font-size: 0.5em;
     background-color: #163d5b;
-    text-align:center;
+    text-align:start;
     color: white;
-
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
 }
+
 footer img {
-    width:30%;
+    width:280px;
 
 }
 
-footer  a img{
-    width: 58px;
+footer a img {
+    width: 30px;
 }
 
 /* expositores[line] */
 
-.categorias{
-    background-color:#c77881 ;
+.categorias {
+    
+    margin-top: 30px;
+    font-size: 1.2em;
+    width:95%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+}
+.dropdown a{
+    font-size: 1.5em;
+    background-color: #fff;
+    color: black;
+    width: 100%;
 
 }
-.categorias ul li{
+.categorias input{
+    font-size: 1.5em;
+    background-color: #fff;
+    color: black;
+    width: 100%;
+
+}
+.dropdown:active{
+    background-color: #163d5b;
+}
+.dropdown-item:hover{
+    font-weight: 600;
+
+}
+.dropdown-item:active{
+    background-color: #163d5b;
+    color: white;
+
+}
+.dropdown-menu{
+    /* display: flex; */
+
+}
+.categorias h1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    width: 100%;
+}
+.categorias ul li {
     list-style-type: none;
     font-size: 2em;
 }
-.categorias ul a{
-    color: white;
-
-}
 .expositores div{
-    border-style:outset;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+    justify-content: space-around;
+}
+.cardExpositores{
+    width: 400px;
+    border: 1px;
+    display: flex;
+    margin: 0px 20px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 40px;
     background-color: #2d8281;
+    box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.75);
+}
+/* .cardExpositores:hover{
+    width: 450px;
+    box-shadow: 10px 10px 10px rgb(0, 0, 0, 0.75);
+    
+} */
+.cardExpositores img{
+    width: 250px;
+    margin: 15px 0px;
+}
+.cardExpoBody{
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+    
+
+}
+.cardExpoBody div{
+    display: flex;
+    justify-content: center;
+}
+.cardExpoBody a img {
+    width: 50px;
+    margin: 0 4px;
+    
+}
+.cardExpoBody a img:hover {
+    width: 60px;
+    margin: 0 4px;
+    
+}
+
+.expositores div {
+    
+    
     color: white;
 }
 
-.expositores img{
-    width: 300px;
-}
-.expositores a img {
-    width: 56px;
-}
 
-.formulario{
+
+
+
+.formulario {
     width: 20%;
     text-align: center;
     margin-left: 550px;
     margin-right: 500px;
     height: 300px;
 }
+
+/* Page . CLASES */
+
 .clases{
-    text-align: center;
+    font-size: 1.5rem;
+    margin: 40px 20px;
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
 }
-.fiveStar {
+.clases h2{
+    margin: 0px;
+    text-align: start;
+    
+}
+.videoTitulo{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 20px;
+
+}
+
+.videoTitulo button{
+    width: 130px;
+    padding: 5px 20px;
+    border-radius: 20px;
+    background-color: green;
+    color: white;
+    border: none;
+    font-size: 1.5em;
+}
+.descripcionVideo{
+    
+    display: flex;
+    flex-direction: row;
+    text-align: start;
+}
+
+.imgVideo{
+    margin-right: 20px;
+    
+}
+.imgVideo img{
+    width: 100%;
+}
+.tituloVideo{
+    width: 50%;
+    
+}
+.tituloVideo img{
+width: 150px;
+}
+
+.descripcionVideo{
+    width: 90%;
+    margin-top: 30px;
+}
+.recomendados{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    flex-wrap: wrap;
+    font-size: 1em;
+
+}
+.descripcionVideo p{
+    font-size: 1em;
+}
+
+.recomVideos{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 20px 0px;
+    
+    
+    
+}
+.cardRecom{
+    width: 300px;
+    margin: 0px 30px;
+}
+
+/* PAGINA CONTACTO */
+.bodyContact{
+    background-color: #a2ccc2;
+}
+
+.contacto{
+    height: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.formContact{
+    margin: 50px;
+    border: 1px solid;
+    padding: 30px;
+    font-size: 1.5em;
+    width: 400px;
+    display: flex;
+    flex-direction: column ;
+    border-radius: 30px 0px 30px 0px;
+    background-color: white;
+    box-shadow: 10px 10px 10px rgb(0, 0, 0, 0.25);
+    
+}
+.formContact input{
+    height: 30px;
+    font-size: 1.5em;
+}
+.formContact button{
+    
+    margin-top: 10px;
+    height: 40px;
+    font-size: 1.5em;
+    border-radius: 10px;
+    padding: 5px;
+}
+.nombreApellido {
+    display: flex;
+    flex-direction: row;
+    
+}
+.nombreApellido input{
+    width: 100%;
+    
+}
+
+/* TALLERES */
+
+.talleres{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    
+
+}
+.pageNav{
+    margin: 60px;
+    width: 100%;
+    justify-content: space-around;
+    
+}
+.pageNav a{
+    font-size: 1.5em;
+    color: black;
     width: 100px;
     text-align: center;
 }
-.recomendados {
+
+.talleres h1{
+    width: 100%;
+    margin: 50px;
+}
+
+.avatarCircle{
+    
+    border-radius: 50%;
+    width: 100%;
+    margin: 20px 0 25px 0;
+    width: 200px;
+}
+.talleresLeft{
     display: flex;
-}
-
-.recomendados div {
-    flex-wrap: wrap;
-    width: 300px;
     flex-direction: column;
+    width: 30%;
+    justify-content: space-evenly;
+
+}
+.datosAvatar{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
     
 }
-.recomendados a img{
-    width: 300px;
+.nombreTalleres{
+    font-weight: 600;
+    margin: 0 ;
 }
-@media only screen and (max-width: 991px){
+.profesTalleres{
+    font-size: 1.5em;
+   
+}
 
+.rSociales{
+    display: flex;
+    justify-content: center;
 }
-@media only screen and (max-width:500px){
-
-}
-
-
-/* registro [] */
-
-form { 
-    border: 1px solid;
-    display: grid;
-    grid-template-columns: repeat(6, 75px);
-    grid-template-rows: repeat(10, 50px);
-    grid-area: 
-    'lname name name lapell apell apell'
-    'luser luser user user user user'
-    'lmail lmail mail mail mail mail'
-    'lconfmail lconfmail confmail confmail confmail confmail'
-    'lpass lpass pass pass pass pass'
-    'lcpass lcpass confpass confpass confpass'
-    'box conf conf conf conf conf'
-    '0 0 reg reg 0 0';
-}
-.lName {
-    grid-area: lname;
-}
-.name {
-    grid-area: name;
-}
-.LastName {
-    grid-area: lapell;
-}
-.lastName {
-    grid-area: apell;
-}
-.lUser {
-    grid-area: luser;
-}
-.user {
-    grid-area: user;
-}
-.lEmail {
-    grid-area: lmail;
-}
-.email {
-    grid-area: mail;
-}
-.lConfEmail {
-    grid-area: lconfmail;
+.rSociales img{
+    width: 35px;
     
 }
-.confEmail {
-    grid-area: confmail;
+.infoTaller{
+    width: 50%;
 }
-.lPass {
-    grid-area: lpass;
+.inscripcionTaller{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+
 }
-.pass {
-    grid-area: pass;
+.inscripcionTaller p{
+    margin-top: 30px;
+    color: green;
+
 }
-.lConfPass {
-    grid-area: lcpass;
+.inscripcionTaller button{
+    width: 150px;
+    height: 50px;
+    border-radius: 15px;
+    font-size: 1.5em;
+    border: 0;
 }
-.confPass {
-    grid-area: confpass;
+
+/* REGISTRO */
+.registro{
+    width: 100%;
+    background-color: #e6b8c2;
+    height: 800px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.formRegistro{
+    width: 400px;
+}
+.terminos{
+    display: flex;
+    align-items: center;
+}
+.terminos label{
+    font-size: 1em;
+    padding-left: 10px;
+}
+
+
+@media only screen and (max-width: 991px) {
+    
+    .infoRegistroLeft{
+        width: 100%;
+    }
+    .infoRegistroRight{
+        width: 100%;
+        padding-bottom: 20px;
+    }
+    header{
+        flex-wrap: wrap;
+    }
+    .logo{
+        flex: 1;
+        order: 1;
+    }
+    .menuSecundario{
+        order:2;
+    }
+
+    .menuPrincipal {
+        order: 3;
+    }
+
+    .videoPromesa video {
+        width: 100%;
+        
+    }
+    .carousel{
+        width: 80%;
+    }
+}
+
+
+@media only screen and (max-width:500px) {
+
+    footer img {
+        width:100%;
+    
+    }
+    footer {
+
+        justify-content: center;
+
+    }
+    .carousel{
+        width: 100%;
+    }
+
+
+}
+
+
+
+
+
+
+
 
